recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:33: error: expected start of definition
	override def run() {
                 ^SquareKoch:36: error: Unmatched closing brace '}' ignored here
}
^